syntax = "proto3";

package com.tul.gRPCClient.stubs.client;

option java_package = "com.tul.gRPCClient.stubs.client";
option java_multiple_files = true;

message PingRequest {
    string ping = 1;
}
message PongResponse {
    string pong = 1;
}
service PingPongService {
    rpc Ping(PingRequest) returns (PongResponse);
}